--- a/test.html
+++ b/test.html
@@ -3,6 +3,6 @@
         <title>Test</title>
     </head>
     <body>
-        <blockquote class="twitter-tweet"><p lang="en" dir="ltr">April 2022 &gt; September 2022<br><br>What happened <a href="https://twitter.com/APompliano?ref_src=twsrc%5Etfw">@APompliano</a>? <a href="https://t.co/fjGoKevUcj">pic.twitter.com/fjGoKevUcj</a></p>&mdash; sassal.eth 🦇🔊🐼 (@sassal0x) <a href="https://twitter.com/sassal0x/status/1568098711745740800?ref_src=twsrc%5Etfw">September 9, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+        <blockquote class="twitter-tweet"><p lang="en" dir="ltr">we are about to enter what will be known as &quot;The Age of Ethereum&quot;<br><br>are you ready, anon?</p>&mdash; DCinvestor.eth ⌐◨-◨ (@iamDCinvestor) <a href="https://twitter.com/iamDCinvestor/status/1567963023393832962?ref_src=twsrc%5Etfw">September 8, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
     </body>
 </html>
