--- a/index.html
+++ b/index.html
@@ -6,17 +6,42 @@
         <h1>Let's copy and paste shit</h1>
         <textarea id="content" style="width: 100%; height: 400px"></textarea>
         <button id="button">Copy to clipboard</button>
+        <div id="canvas"></div>
     </body>
     <script>
-        document.getElementById('button').addEventListener('click', function () {
-            let content = JSON.parse(document.getElementById('content').value);
+        document.getElementById("button").addEventListener("click", function () {
+            let content = JSON.parse(document.getElementById("content").value);
+
             document.addEventListener("copy", (event) => {
-	
                 event.clipboardData.setData("application/json", JSON.stringify(content));
                 event.preventDefault();
-    
             });
-            document.execCommand('copy');
-        })
+            document.execCommand("copy");
+
+            /*console.log(content);
+            const canvas = document.getElementById("canvas");
+
+            let css = {};
+            css.width = content.width;
+            css.height = content.height;
+            css.background =
+                "rgba(" +
+                Math.ceil(content.fills[0].color.r * 255) +
+                ", " +
+                Math.ceil(content.fills[0].color.b * 255) +
+                ", " +
+                Math.ceil(content.fills[0].color.g * 255) +
+                ", " +
+                content.fills[0].opacity +
+                ")";
+            console.log(content.fills[0].color.r);
+            console.log(css);
+
+            let div = document.createElement("div");
+            div.style.width = css.width;
+            div.style.height = css.height;
+            div.style.background = css.background;
+            canvas.appendChild(div);*/
+        });
     </script>
 </html>
